// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Link Big Device >= 600px should change Language when clicking 1`] = `
.c0 {
  color: #ecf0f1;
  border: initial;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c0:hover {
  color: #2c3e50;
  border: none;
}

<LocalizedComponent
  lang="vn"
  selectedLang="en"
  setActiveLanguage={
    [MockFunction] {
      "calls": Array [
        Array [
          "vn",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  setSelectedLang={
    [MockFunction] {
      "calls": Array [
        Array [
          "vn",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <NavLink
    addTranslation={[Function]}
    addTranslationForLanguage={[Function]}
    ignoreTranslateChildren={false}
    initialize={[Function]}
    lang="vn"
    languages={Array []}
    renderToStaticMarkup={false}
    selectedLang="en"
    setActiveLanguage={
      [MockFunction] {
        "calls": Array [
          Array [
            "vn",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    setSelectedLang={
      [MockFunction] {
        "calls": Array [
          Array [
            "vn",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    translate={[Function]}
  >
    <NavLink__Container
      isSelected={false}
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "NavLink__Container-sc-6fie4r-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "color:",
                [Function],
                ";border:",
                [Function],
                ";border-color:",
                [Function],
                ";font-family:",
                [Function],
                ";font-style:italic;line-height:",
                [Function],
                ";transition:color 0.5s;&:hover{color:",
                [Function],
                ";border:none;}",
              ],
            },
            "displayName": "NavLink__Container",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "NavLink__Container-sc-6fie4r-0",
            "target": "a",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isSelected={false}
        onClick={[Function]}
      >
        <a
          className="c0"
          onClick={[Function]}
        >
          <Translate
            id="vietnamese"
          >
            <WrappedTranslate
              context={
                Object {
                  "activeLanguage": undefined,
                  "addTranslation": [Function],
                  "addTranslationForLanguage": [Function],
                  "defaultLanguage": undefined,
                  "ignoreTranslateChildren": false,
                  "initialize": [Function],
                  "languages": Array [],
                  "renderToStaticMarkup": false,
                  "setActiveLanguage": [Function],
                  "translate": [Function],
                }
              }
              id="vietnamese"
            >
              Missing translationId: vietnamese for language: \${ languageCode }
            </WrappedTranslate>
          </Translate>
        </a>
      </StyledComponent>
    </NavLink__Container>
  </NavLink>
</LocalizedComponent>
`;

exports[`Nav Link Big Device >= 600px should render with English selected 1`] = `
.c0 {
  color: #2c3e50;
  border: none;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c0:hover {
  color: #2c3e50;
  border: none;
}

<LocalizedComponent
  lang="en"
  selectedLang="en"
>
  <NavLink
    addTranslation={[Function]}
    addTranslationForLanguage={[Function]}
    ignoreTranslateChildren={false}
    initialize={[Function]}
    lang="en"
    languages={Array []}
    renderToStaticMarkup={false}
    selectedLang="en"
    setActiveLanguage={[Function]}
    translate={[Function]}
  >
    <NavLink__Container
      isSelected={true}
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "NavLink__Container-sc-6fie4r-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "color:",
                [Function],
                ";border:",
                [Function],
                ";border-color:",
                [Function],
                ";font-family:",
                [Function],
                ";font-style:italic;line-height:",
                [Function],
                ";transition:color 0.5s;&:hover{color:",
                [Function],
                ";border:none;}",
              ],
            },
            "displayName": "NavLink__Container",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "NavLink__Container-sc-6fie4r-0",
            "target": "a",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isSelected={true}
        onClick={[Function]}
      >
        <a
          className="c0"
          onClick={[Function]}
        >
          <Translate
            id="english"
          >
            <WrappedTranslate
              context={
                Object {
                  "activeLanguage": undefined,
                  "addTranslation": [Function],
                  "addTranslationForLanguage": [Function],
                  "defaultLanguage": undefined,
                  "ignoreTranslateChildren": false,
                  "initialize": [Function],
                  "languages": Array [],
                  "renderToStaticMarkup": false,
                  "setActiveLanguage": [Function],
                  "translate": [Function],
                }
              }
              id="english"
            >
              Missing translationId: english for language: \${ languageCode }
            </WrappedTranslate>
          </Translate>
        </a>
      </StyledComponent>
    </NavLink__Container>
  </NavLink>
</LocalizedComponent>
`;

exports[`Nav Link Big Device >= 600px should render with Vietnamese selected 1`] = `
.c0 {
  color: #2c3e50;
  border: none;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c0:hover {
  color: #2c3e50;
  border: none;
}

<LocalizedComponent
  lang="vn"
  selectedLang="vn"
>
  <NavLink
    addTranslation={[Function]}
    addTranslationForLanguage={[Function]}
    ignoreTranslateChildren={false}
    initialize={[Function]}
    lang="vn"
    languages={Array []}
    renderToStaticMarkup={false}
    selectedLang="vn"
    setActiveLanguage={[Function]}
    translate={[Function]}
  >
    <NavLink__Container
      isSelected={true}
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "NavLink__Container-sc-6fie4r-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "color:",
                [Function],
                ";border:",
                [Function],
                ";border-color:",
                [Function],
                ";font-family:",
                [Function],
                ";font-style:italic;line-height:",
                [Function],
                ";transition:color 0.5s;&:hover{color:",
                [Function],
                ";border:none;}",
              ],
            },
            "displayName": "NavLink__Container",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "NavLink__Container-sc-6fie4r-0",
            "target": "a",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isSelected={true}
        onClick={[Function]}
      >
        <a
          className="c0"
          onClick={[Function]}
        >
          <Translate
            id="vietnamese"
          >
            <WrappedTranslate
              context={
                Object {
                  "activeLanguage": undefined,
                  "addTranslation": [Function],
                  "addTranslationForLanguage": [Function],
                  "defaultLanguage": undefined,
                  "ignoreTranslateChildren": false,
                  "initialize": [Function],
                  "languages": Array [],
                  "renderToStaticMarkup": false,
                  "setActiveLanguage": [Function],
                  "translate": [Function],
                }
              }
              id="vietnamese"
            >
              Missing translationId: vietnamese for language: \${ languageCode }
            </WrappedTranslate>
          </Translate>
        </a>
      </StyledComponent>
    </NavLink__Container>
  </NavLink>
</LocalizedComponent>
`;

exports[`Nav Link Small Device < 600px should render with English selected 1`] = `
.c0 {
  color: #2c3e50;
  border: none;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c0:hover {
  color: #2c3e50;
  border: none;
}

<LocalizedComponent
  lang="en"
  selectedLang="en"
>
  <NavLink
    addTranslation={[Function]}
    addTranslationForLanguage={[Function]}
    ignoreTranslateChildren={false}
    initialize={[Function]}
    lang="en"
    languages={Array []}
    renderToStaticMarkup={false}
    selectedLang="en"
    setActiveLanguage={[Function]}
    translate={[Function]}
  >
    <NavLink__Container
      isSelected={true}
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "NavLink__Container-sc-6fie4r-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "color:",
                [Function],
                ";border:",
                [Function],
                ";border-color:",
                [Function],
                ";font-family:",
                [Function],
                ";font-style:italic;line-height:",
                [Function],
                ";transition:color 0.5s;&:hover{color:",
                [Function],
                ";border:none;}",
              ],
            },
            "displayName": "NavLink__Container",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "NavLink__Container-sc-6fie4r-0",
            "target": "a",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isSelected={true}
        onClick={[Function]}
      >
        <a
          className="c0"
          onClick={[Function]}
        >
          en
        </a>
      </StyledComponent>
    </NavLink__Container>
  </NavLink>
</LocalizedComponent>
`;

exports[`Nav Link Small Device < 600px should render with Vietnamese selected 1`] = `
.c0 {
  color: #2c3e50;
  border: none;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c0:hover {
  color: #2c3e50;
  border: none;
}

<LocalizedComponent
  lang="vn"
  selectedLang="vn"
>
  <NavLink
    addTranslation={[Function]}
    addTranslationForLanguage={[Function]}
    ignoreTranslateChildren={false}
    initialize={[Function]}
    lang="vn"
    languages={Array []}
    renderToStaticMarkup={false}
    selectedLang="vn"
    setActiveLanguage={[Function]}
    translate={[Function]}
  >
    <NavLink__Container
      isSelected={true}
      onClick={[Function]}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "NavLink__Container-sc-6fie4r-0",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "color:",
                [Function],
                ";border:",
                [Function],
                ";border-color:",
                [Function],
                ";font-family:",
                [Function],
                ";font-style:italic;line-height:",
                [Function],
                ";transition:color 0.5s;&:hover{color:",
                [Function],
                ";border:none;}",
              ],
            },
            "displayName": "NavLink__Container",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "NavLink__Container-sc-6fie4r-0",
            "target": "a",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isSelected={true}
        onClick={[Function]}
      >
        <a
          className="c0"
          onClick={[Function]}
        >
          vn
        </a>
      </StyledComponent>
    </NavLink__Container>
  </NavLink>
</LocalizedComponent>
`;
